--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-container{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color:rgb(250,250,250) ;
 }
 
-.App-link {
-  color: #61dafb;
+.instagram-logo{
+  width: 175px;
+  height: 51px;
+  margin: 15px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fb-logo{
+  width: 15px;
+  height: 15px;
 }
+
+.app-store-image{
+  width: 136px;
+  height: 40px;
+  margin-right: 5px;
+}
+
+.google-play-image{
+  width: 136px;
+  height: 40px;
+  margin-left: 5px;
+}
+
+.box-1{
+  height: 400px;
+  width: 350px;
+  border: 1px solid rgb(219, 219, 219);
+  background-color: rgb(255, 255, 255);
+
+}
+.box-2{
+  height: 63px;
+  width: 350px;
+  border: 1px solid rgb(219,219, 219);
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 10px 0;
+}
+
+input{
+  background-color: rgb(250, 250, 250);
+  font-weight: 400;
+  line-height: 18px;
+  font-size: 13px;
+  padding: 9px 0 7px 8px;
+  height: 36px;
+  width: 260px;
+  border: 0;
+  outline: none;
+  margin: 10px 0;
+  border: 1px solid rgb(219,219, 219);
+}
+
+.login-button{
+  border-radius: 4px;
+  background-color: #405DE6;
+  color: rgb(255,255,255);
+  padding: 5px 9px;
+  border: none;
+  width: 268px;
+  height: 30px;
+  font-size: 14px;
+  font-weight: bold;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+.lines-box{
+margin: 20px 0;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
+height: 10px;
+font-size: 13px;
+color: #8e8e8e;
+font-weight: bold;
+}
+
+.line-1{
+  width: 106px;
+  height: 1px;
+  background-color: #dbdbdb;
+  margin-right: 10px;
+}
+
+.line-2{
+  width: 106px;
+  height: 1px;
+  background-color: #dbdbdb;
+  margin-left: 10px;
+}
+
+.fb-box{
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.fb-link{
+  color: #385185;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.forgotten-password-link{
+  color: #385185;
+   font-size: 13px;
+}
+
+
